edited title, added pageshot

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Author: Asif Mahmud Rony
+		this blog is about travel's story.People who travel for gaining wisdom are highly
+		allowed to share their experience and details guideline to help visit other people.
+		*Post writter : Intitally by me/Rony will post which got from different traveler's facebook post and different newspapers "vromon" page 
+			international travel blog posts by converting to bengali.
+		*Content Written: Bengali
+		*Website Type: Blogging
+	-->	
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Travel Review</title>
+    <title>Traveler's Place - know your next desination</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
 
